# sturdy-waffle

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  common.hpp  file.cpp  file.hpp  lexer.cpp  lexer.hpp  location.hpp  main.cpp  token.hpp  token_type.hpp  version.conf.in  version.cpp  version.hpp
tests/: CMakeLists.txt  code.x
tests/file_read/: file_read.cpp
tests/lexer_simple/: CMakeLists.txt  lexer_simple.cpp
tests/silly_test/: CMakeLists.txt  silly_test.cpp
